<resources>
    <string name="app_name">Tip jar</string>
    <string name="pay_with_android_pay">Pay with Android Pay</string>
    <string name="kitchen">Kitchen</string>
    <string name="service">Service</string>
    <string name="both">Both</string>
    <string name="comments">Comments</string>
    <string name="department">Department</string>
    <string name="your_tip">Your tip</string>
    <string name="pls_select_a_tip_or_department">Please select a tip and department!</string>
    <string name="summary">Summary</string>
    <string name="tip">Tip :</string>
    <string name="department2">Department :</string>
    <string name="comment">Comment :</string>
    <string name="option_select_restaurant">Select Restaurant</string>
    <string name="default_info_title">Default Location</string>
    <string name="pick_place">Choose a restaurant</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="url" translatable="false">https://gregory-bakery-api.herokuapp.com</string>
</resources>
